--- a/reservations/templates/template_bon_reservation.html
+++ b/reservations/templates/template_bon_reservation.html
@@ -79,7 +79,7 @@
     </section>
     <p class="text-normal"> <b>Distance : </b>{{distance_km}} km</p>
     <p class="text-normal"> <b>Durée :</b> {{temps_humain}}</p>
-    <p class="text-normal"> <b>Aller et retour:</b> {{aller_retour}} </p>
+    <p class="text-normal"> <b>Type de trajet :</b> {{aller_retour}} </p>
     <p class="text-normal"> <b>Observation(s):</b> {{commenataire_trajet}}</p>
     <!-- Bandeau 5 -->
     <section class="bandeau">
