--- a/reservations/templates/template_bon_reservation.html
+++ b/reservations/templates/template_bon_reservation.html
@@ -7,17 +7,10 @@
     <link rel="stylesheet" href="{% static 'css/style_bon.css' %}">
 </head>
 <body>
-    <div class="download-container">
-    <a href="/" download>
-    Télécharger le bon de réservation au format PDF
-    <img src="https://cdn-icons-png.flaticon.com/512/337/337946.png" alt="Icône PDF">
-    </a>
-    </div>
     <!-- Logo -->
     <header>
-        <img src="{% static 'images/logo_SM.jpg' %}" alt="Logo" class="logo" >
+        <img  src="/static/images/logo_SM.jpg" alt="~~Logo VTC MESLE" class="logo">
     </header>
-
     <!-- Texte 1 -->
     <p class="text-small">Vos trajets en toute séténité</p>
 
@@ -103,6 +96,5 @@
     </div>
 
     <p class="text-small">Arrêté du 6 janvier 1993 portant création d'un document valant ordre de mission devant se trouver à bord des véhicules de transport routier public de personnes</p>
-
 </body>
 </html>
