--- a/reservations/static/css/style.css
+++ b/reservations/static/css/style.css
@@ -320,3 +320,52 @@ height: 370px;
     border-radius: 3px;
     margin: 10px 0;
 }
+
+.success-icon {
+    font-size: 70px;
+    color: #34a853; /* vert succès */
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+h2 {
+    font-size: 24px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+
+.actions {
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    text-align: center;
+}
+
+button {
+    padding: 12px 20px;
+    border-radius: 6px;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.btn-primary {
+    background-color: #0077ff;
+    color: white;
+}
+
+.btn-primary:hover {
+    background-color: #005fcc;
+}
+
+.btn-secondary {
+    background-color: #e5e5e5;
+    color: #333;
+}
+
+.btn-secondary:hover {
+    background-color: #d0d0d0;
+}
