--- a/reservations/templates/echec.html
+++ b/reservations/templates/echec.html
@@ -7,26 +7,21 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+  <div class="container">
+  <h1>Confirmation de la commande</h1>
       <nav>
       <a href="/admin/">Admin</a> |
       <a href="/welcome/">Page d'accueil</a> | 
       <a href="/paiement/">Paiement</a> | 
       <a href="/">Reset</a>
     </nav>
+    <h2>checkout ID</h2>
+  <p>{{ checkout_id }}</p><br>
+  <p>{{ checkout_status }}</p><br>
 
-    <div class="success-icon">✓</div>
-
-    <h2>
-        Commande validée,<br>
-        merci Monsieur {{ nom_client }}.
-    </h2>
-
-    <a href="{% url 'download_pdf' client_ref=client_ref %}" class="btn btn-primary">
-        Télécharger le bon de réservation
-    </a>
-    <button class="btn-secondary">Générer une facture</button>
-    </div>
-
+  <p>Téléchargez votre bon de commande ci dessous : </p>
+  <a href="/{{client_ref}}/bon_de_commande/">Bon de commande</a>
+</div>  
 
 </body>
 </html>
