--- a/reservations/templates/echec.html
+++ b/reservations/templates/echec.html
@@ -18,9 +18,9 @@
     <h2>checkout ID</h2>
   <p>{{ checkout_id }}</p><br>
   <p>{{ checkout_status }}</p><br>
-
-  <p>Téléchargez votre bon de commande ci dessous : </p>
-  <a href="/{{client_ref}}/bon_de_commande/">Bon de commande</a>
+  
+  <div class="error-icon">x</div>
+  <p>Echec du paiement</p>
 </div>  
 
 </body>
