--- a/reservations/templates/paiement.html
+++ b/reservations/templates/paiement.html
@@ -42,6 +42,8 @@
       },
     });
   </script>
+  <p class="helptext">La validation du paiement peut prendre quelques secondes</p>
+
 </div>
 </body>
 </html>
