--- a/reservations/templates/template_mail_owner.html
+++ b/reservations/templates/template_mail_owner.html
@@ -58,12 +58,12 @@
 <div style="
     display:flex;
     justify-content:center;
-    gap:12px;
-    margin-top:20px;
+    gap:30px;
+    margin-top:50px;
 ">
 
     <!-- Bouton 1 -->
-    <a href="{{ partial_refund }}"
+    <a href="{{ partial_refund_link }}"
        style="background-color:#d90429; color:white; padding:10px 18px;
               text-decoration:none; border-radius:6px; font-weight:bold;
               display:inline-block;">
@@ -71,7 +71,7 @@
     </a>
 
     <!-- Bouton 2 -->
-    <a href="{{ full_refund }}"
+    <a href="{{ full_refund_link }}"
        style="background-color:#9b1c31; color:white; padding:10px 18px;
               text-decoration:none; border-radius:6px; font-weight:bold;
               display:inline-block;">
