--- a/reservations/static/css/style_bon.css
+++ b/reservations/static/css/style_bon.css
@@ -117,3 +117,37 @@ header {
     height: 40px;
     margin-left: 6px;
 }
+
+.header-block {
+    display: flex;
+    gap: 12px;
+
+    padding: 6px 8px;      /* marges latérales & top minimales */
+    align-items: flex-start;
+}
+
+
+.header-left {
+    flex: 1;               /* 1/3 */
+    max-width: 33%;
+    text-align: center;
+}
+
+.logo {
+    width: 100%;
+    max-height: 300px;
+    object-fit: contain;
+}
+
+.slogan {
+    margin-top: 6px;
+    font-size: 12px;
+}
+.header-right {
+    flex: 2;               /* 2/3 */
+    max-width: 67%;
+}
+
+.header-right p {
+    margin: 2px 0;         /* densité verticale maximale */
+}
