--- a/reservations/templates/facture_generation.html
+++ b/reservations/templates/facture_generation.html
@@ -10,9 +10,9 @@
 <body>
 <div class="container">
 
-  <h1>Formulaire de Contact</h1>
+  <h2>Génération de facture</h2>
     <nav>
-      <a href="/">← Retour à l'aperçu</a>
+      <a href="{% url 'paiement_resultat' client_ref=client_ref %}">← Retour à l'aperçu</a>
     </nav>
 
 <form id="trajetForm" method="post" novalidate>
@@ -22,6 +22,14 @@
     <br>
     <p class="note"> En soumettant ce formulaire, j'accepte que mes informations soient utilisées uniquement dans le cadre de ma réservation</p>
 </form>
+
+{% if success_message %}
+  <div>
+      <a href="{% url 'download_pdf_facture' client_ref=client_ref %}" class="btn-link">
+        Télécharger la facture au format PDF
+    </a>
+  </div>
+{% endif %}
 
 </div>
 </body>
