--- a/reservations/templates/paiement.html
+++ b/reservations/templates/paiement.html
@@ -12,7 +12,7 @@
   <h1>Paiement</h1>
     <nav>
       <a href="/contact">← Retour au formulaire de contact</a> |
-      <a href="/{{client_ref}}/paiement/resultat">Simuler un paiement →</a>
+      <a href="/{{client_ref}}/temp">Simuler un paiement →</a>
     </nav>
     <br>
     
@@ -22,9 +22,6 @@
         <p class="{{ message.tags }}">{{ message }}</p>
       {% endfor %}
     {% endif %}
-
-  <h2>checkout ID</h2>
-  <p>{{ checkout_id }}</p>
 
   <div id="sumup-card"></div>
   <script
