--- a/reservations/templates/success.html
+++ b/reservations/templates/success.html
@@ -10,9 +10,8 @@
     <div class="container">
     <br>
       <nav>
-      <a href="/admin/">Admin</a> |
       <a href="/welcome/">Page d'accueil</a> | 
-      <a href="/">Reset</a>
+      <a href="/">Nouvelle Demande</a>
     </nav>
     </div>
     <div class="box-highlight-ok">
