--- a/reservations/static/css/style_bon.css
+++ b/reservations/static/css/style_bon.css
@@ -1,3 +1,10 @@
+@page {
+    margin-top: 15mm;
+    margin-bottom: 10mm;
+    margin-left: 15mm;
+    margin-right: 15mm;
+}
+
 body {
     width: 100%;
     margin: 0 auto;
@@ -51,9 +58,9 @@ header {
 /* Bandeaux */
 .bandeau {
     background-color: #e6e6e6;
-    padding: 12px;
-    margin-top: 25px;
-    margin-bottom: 10px;
+    padding: 8px;
+    margin-top: 15px;
+    margin-bottom: 8px;
     border-radius: 6px;
     text-align: center;
 }
@@ -73,49 +80,21 @@ header {
 .cadres {
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    margin-top: 20px;
     gap: 20px;
 }
 
 .cadre {
     flex: 1;
     border: 1px solid #aaa;
-    border-radius: 6px;
-    padding: 15px;
+    border-radius: 8px;
+    padding: 5px;
 }
 
 .cadre h3 {
     margin-top: 0;
     font-size: 10pt;
     text-align: center;
-}
-
-.download-container {
-    display: flex;
-    justify-content: flex-end;   /* aligne à droite */
-    align-items: center;
-    margin: 20px;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    color: #444;
-}
-
-.download-container a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: inherit;
-    transition: opacity 0.2s;
-}
-
-.download-container a:hover {
-    opacity: 0.8;
-}
-
-.download-container img {
-    width: 40px;
-    height: 40px;
-    margin-left: 6px;
 }
 
 .header-block {
