--- a/reservations/templates/template_bon_reservation.html
+++ b/reservations/templates/template_bon_reservation.html
@@ -19,10 +19,10 @@
     <!-- Colonne droite : texte -->
     <div class="header-right">
         <p class="text-normal">
-            Exploitant de Véhicule de transport avec chauffeur</p><br>
-        <p class="text-normal">Entreprise individuelle - SIRET : {{ siret }}</p><br>
-        <p class="text-normal">Entreprise déclarée au RNE - non assujettie à la TVA</p><br>
-        <p class="text-normal">{{ adresse }}</p><br>
+            Exploitant de Véhicule de transport avec chauffeur</p>
+        <p class="text-normal">Entreprise individuelle - SIRET : {{ siret }}</p>
+        <p class="text-normal">Entreprise déclarée au RNE - non assujettie à la TVA</p>
+        <p class="text-normal">{{ adresse }}</p>
         <p class="text-normal"><b>{{ telephone }}</b> - <b>{{ mail }}</b></p>
     </div>
 </header>
