--- a/reservations/templates/reservation.html
+++ b/reservations/templates/reservation.html
@@ -62,9 +62,9 @@
     {{ form.as_p }}
   
   <p class="note">Notes :</p>
-  <p class="note">  - Bagages autorisés : 1 bagage cabine par personne</p>
-  <p class="note">  - Véhicule utilisé pour la préstation : {{ vehicle }} immatriculé : {{ vehicle_immatriculation }} </p>
-  <p class="note">  - {{ name }} sera chargé de la prestation, et s'assurera de votre bon voyage</p>
+  <p class="note">Bagages autorisés : 1 bagage cabine par personne</p>
+  <p class="note">Véhicule utilisé pour la préstation : {{ vehicle }} immatriculé : {{ vehicle_immatriculation }}</p>
+  <p class="note">{{ name }} sera chargé de la prestation, et s'assurera de votre bon voyage</p>
   
 
     <button name="btnPrevisualiser" type="submit">Prévisualiser la course</button>
