--- a/reservations/templates/template_bon_reservation.html
+++ b/reservations/templates/template_bon_reservation.html
@@ -11,7 +11,7 @@
     <!-- Colonne gauche : logo -->
     <div class="header-left">
         <img src="/static/images/logo_SM.jpg"
-             alt="Logo VTC MESLE"
+             alt="VTC MESLE"
              class="logo">
         <p class="text-small slogan">Vos trajets en toute sérénité</p>
     </div>
