get ready for prod p1

--- a/reservations/templates/contact.html
+++ b/reservations/templates/contact.html
@@ -12,7 +12,7 @@
 
   <h1>Formulaire de Contact</h1>
     <nav>
-      <a href="/">← Retour à l'aperçu</a>
+      <a href="{% url 'reservation' %}">← Retour à l'aperçu</a>
     </nav>
 
 <form id="trajetForm" method="post" novalidate>
