--- a/reservations/templates/paiement.html
+++ b/reservations/templates/paiement.html
@@ -11,7 +11,7 @@
 <div class="container">
   <h1>Paiement</h1>
     <nav>
-      <a href="/contact">← Retour au formulaire de contact</a> |
+      <a href="{% url 'reservation' %}">← Retour au formulaire de contact</a> |
       <a href="/{{client_ref}}/temp">Simuler un paiement →</a>
     </nav>
     <br>
