--- a/reservations/templates/welcome.html
+++ b/reservations/templates/welcome.html
@@ -12,7 +12,7 @@
     <h1>Bienvenue sur notre service de réservation</h1>
     <nav>
       <a href="{% url 'reservation' %}">Réserver un trajet</a> |
-      <a href="/administrator-acess/">Espace Admin</a>
+      <a href="{% url 'admin-access' %}">Espace Admin</a>
     </nav>
   </header>
 
