--- a/reservations/templates/success.html
+++ b/reservations/templates/success.html
@@ -10,8 +10,8 @@
     <div class="container">
     <br>
       <nav>
-      <a href="/welcome/">Page d'accueil</a> | 
-      <a href="/">Nouvelle Demande</a>
+      <a href="{% url 'welcome' %}">Page d'accueil</a> | 
+      <a href="{% url 'reservation' %}">Nouvelle Demande</a>
     </nav>
     </div>
     <div class="box-highlight-ok">
