--- a/reservations/templates/welcome.html
+++ b/reservations/templates/welcome.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Bienvenue sur notre service de réservation</h1>
     <nav>
-      <a href="{% url 'reservation' %}">Réserver un trajet</a> |
+      <a href="{% url 'reservation' %}">Réserver un trajet</a>
     </nav>
   </header>
 
