--- a/reservations/templates/reservation.html
+++ b/reservations/templates/reservation.html
@@ -74,7 +74,7 @@
     &copy; {{ current_year }} - Réservation de trajets. Tous droits réservés.
   </footer>
 
-  <script async src="https://maps.googleapis.com/maps/api/js?key={{ api_key }}&libraries=places&callback=initMap"></script>
+  <script async src="https://maps.googleapis.com/maps/api/js?key={{ googlemaps_api_key_frontend }}&libraries=places&callback=initMap"></script>
   <script src="{% static 'script.js' %}"></script>
 </body>
 
